--- a/Pages/Combinaison.html
+++ b/Pages/Combinaison.html
@@ -71,7 +71,7 @@
                     <p>
                         Le principal critère qu’une combinaison doit remplir est la durabilité. Et pour qu’une
                         combinaison soit durable il faut premièrement qu’elle réponde à tes attentes de rider avec de
-                        bonnes performances techniques. (souplesse, chaleur, absence d’irritation au niveau du cou…)
+                        bonnes performances techniques (souplesse, chaleur, absence d’irritation au niveau du cou…).
                         Pour durer le plus longtemps possible, elles doivent aussi être fabriquées avec une qualité
                         irréprochable. Un soin particulier doit être apporté aux zones sensibles (coutures robustes, le
                         renfort des zones exposées comme les genoux ou encore un zip solide).
@@ -95,11 +95,10 @@
                         en
                         néoprène pétrochimique. Il existe à nos yeux deux alternatives écologiques au néoprène
                         traditionnel
-                        avec un niveau d’impact écologique différent :
-                        • Les combinaisons fabriquées à partir de caoutchouc naturel.
+                        avec un niveau d’impact écologique différent :<br />
+                        • Les combinaisons fabriquées à partir de caoutchouc naturel<br />
                         • Les combinaisons fabriquées à partir de plusieurs matières premières naturelles et
-                        renouvelables
-                        (BioPrène et l’OysterPrene)
+                        renouvelables (BioPrène et l’OysterPrene).
                         <br /><br />
                     </p>
                     <h3>Des conditions de fabrication éthiques</h3>
@@ -110,7 +109,7 @@
                         dans des conditions de travail qui respectent les droits sociaux des travailleurs. Toutes les
                         marques présentées dans cet article travaillent avec des fournisseurs sérieux et reconnus comme
                         notamment SHEICO, leader dans la fabrication des combinaisons. Ils ont donc reçu un ensemble de
-                        certification qui témoignent des bonnes condition de fabrication comme la certification de
+                        certification qui témoignent des bonnes conditions de fabrication comme la certification de
                         qualité
                         ISO 9001, la certification en matière de santé et de sécurité au travail OHSAS 18001, la
                         certification bluesign® qui met l’accent sur cinq aspects principaux, à savoir la productivité
@@ -169,7 +168,7 @@
                 <div class="cards-text">
                     <h3>Combinaison Surf Picture Organic</h3>
                     <p><span>Composition :</span> Les combinaisons de surf Picture Organic Clothing, la marque française
-                        qui développe des combinaisons Eco Friendly, ces combinaisons sont fabriqués à l'aide
+                        qui développe des combinaisons Eco Friendly, ces combinaisons sont fabriquées à l'aide
                         "d'Eicoprène" une mousse synthétique élaborée à l'aide d'un mélange de calcaire et de pneus
                         recyclés (environ 30%) pour minimiser l'impact environnemental de sa production. La colle entre
                         la mousse et les tissus est elle aussi éco friendly puisqu'elle est sans solvant
