--- a/Pages/Accessoires.html
+++ b/Pages/Accessoires.html
@@ -72,7 +72,7 @@
             à mettre dans le même panier et certains se sont relevés les manches pour travailler sur la formulation
             d’une wax beaucoup moins polluante. C’est notamment le cas de la marque GreenFix basée dans le Pays Basque.
             La wax GreenFix est un mélange de : Cire animale (abeille), Cire végétale, Huile végétale, Colle colophane
-            obtenue à partir de résine de pin</p>
+            obtenue à partir de résine de pin.</p>
           <p>
             <span>Prix :</span> 3 €<br /><br />
 
@@ -95,8 +95,8 @@
           <h3>Le Pad</h3>
           <p>Le pad de surf est la petite mousse que l'on colle à l'arrière de la planche de surf. Son utilité ?
             Augmenter l'accroche tout en limitant l'utilisation de wax. Il sera d'une aide précieuse aux manœuvres d'un
-            surfeur expérimenté. Mais tous les pads ne sont pas écologique. Mais quelques fabricants comme nomads
-            surfing, yuyo etc utilise des matériaux durables, recyclés ou bio sourcés pour la fabrication de leurs
+            surfeur expérimenté. Mais tous les pads ne sont pas écologiques. Mais quelques fabricants comme nomads
+            surfing, yuyo etc utilisent des matériaux durables, recyclés ou bio sourcés pour la fabrication de leurs
             produits comme le liège. Ils allonge également au maximum la vie de leurs produits pour un avenir durable.
           </p>
           <p>
@@ -169,7 +169,8 @@
       <div class="cards">
         <div class="cards-text">
           <h3>La crème solaire</h3>
-          <p>L’exposition prolongée au soleil a des effets sur votre peau et sur votre santé. La crème solaire ce n’est pas que pour l’été, dès qu’il y a du soleil, il faut se protéger. En surf, la réverbération du soleil sur l’eau est encore plus fatale car elle augmente considérablement l’exposition aux rayons UVA et UVB. Il vous faudra donc une crème solaire qui vous protège efficacement, qui résiste à l’eau pendant toute la durée de votre session et qui ne coule pas dans les yeux. Contrairement à la crème solaire habituel, le stick, lui, a une meilleure tenue sur le visage. C’est donc pour cela que la plupart des surfeurs en utilise. Mais il ne faut surtout pas oublier l’impact écologique car la crème solaire pollue. Voici donc quelque exemple de crème solaire écologique :</p>
+          <p>L’exposition prolongée au soleil a des effets sur votre peau et sur votre santé. La crème solaire ce n’est pas que pour l’été, dès qu’il y a du soleil, il faut se protéger. En surf, la réverbération du soleil sur l’eau est encore plus fatale car elle augmente considérablement l’exposition aux rayons UVA et UVB. Il vous faudra donc une crème solaire qui vous protège efficacement, qui résiste à l’eau pendant toute la durée de votre session et qui ne coule pas dans les yeux. Contrairement à la crème solaire habituel, le stick, lui, a une meilleure tenue sur le visage. C’est donc pour cela que la plupart des surfeurs en utilise. Mais il ne faut surtout pas oublier l’impact écologique car la crème solaire pollue. <br />Voici donc quelques exemples de crème solaire écologique :          
+          </p>
           <p>
             <span>Prix :</span> environ 15€<br /><br />
             <span>Lien :</span>
