--- a/Pages/Accessoires.html
+++ b/Pages/Accessoires.html
@@ -31,7 +31,7 @@
   <header class="Header">
 
     <div class="Logo-title">
-      <a href="../index.html#Home"><img src="../ressources/images/Hibiscus-Flower-Surf-Hawaii-Beach-Logo-Graphics.png"
+      <a href="../index.html#Home"><img src="../ressources/images/ower-surf-hawaii-beach-logo-graphics.webp"
           alt="Logo des sport extreme" /></a>
 
       <h2>The Green Surf</h2>
@@ -81,14 +81,14 @@
         </div>
 
         <div class="cards-img">
-          <img src="../ressources/images/wax.png" alt="image de wax" />
+          <img src="../ressources/images/wax.webp" alt="image de wax" />
         </div>
       </div>
 
       <div class="cards">
 
         <div class="cards-img">
-          <img src="../ressources/images/pad.png" alt="image de Pad" />
+          <img src="../ressources/images/pad.webp" alt="image de Pad" />
         </div>
 
         <div class="cards-text">
@@ -135,7 +135,7 @@
         </div>
 
         <div class="cards-img">
-          <img src="../ressources/images/leash.png" alt="image de leash" />
+          <img src="../ressources/images/leash.webp" alt="image de leash" />
         </div>
       </div>
 
