--- a/Pages/Combinaison.html
+++ b/Pages/Combinaison.html
@@ -32,7 +32,7 @@
 
         <div class="Logo-title">
             <a href="../index.html#Home"><img
-                    src="../ressources/images/Hibiscus-Flower-Surf-Hawaii-Beach-Logo-Graphics.png"
+                    src="../ressources/images/ower-surf-hawaii-beach-logo-graphics.webp"
                     alt="Logo des sport extreme" /></a>
 
             <h2>The Green Surf</h2>
@@ -148,7 +148,7 @@
             <div class="cards">
 
                 <div class="cards-img">
-                    <img src="../ressources/images/88521_BLK.jpg" alt="image combinaison" />
+                    <img src="../ressources/images/88521-blk.webp" alt="image combinaison" />
                 </div>
 
                 <div class="cards-text">
@@ -179,7 +179,7 @@
                 </div>
 
                 <div class="cards-img">
-                    <img src="../ressources/images/image-combianaison.png" alt="image combinaison" />
+                    <img src="../ressources/images/image-combianaison.webp" alt="image combinaison" />
                 </div>
             </div>
 
