--- a/Pages/Planche_surf.html
+++ b/Pages/Planche_surf.html
@@ -33,7 +33,7 @@
   <header class="Header">
 
     <div class="Logo-title">
-      <a href="../index.html#Home"><img src="../ressources/images/Hibiscus-Flower-Surf-Hawaii-Beach-Logo-Graphics.png"
+      <a href="../index.html#Home"><img src="../ressources/images/ower-surf-hawaii-beach-logo-graphics.webp"
           alt="Logo des sport extreme" /></a>
 
       <h2>The Green Surf</h2>
@@ -71,7 +71,7 @@
             qui sont huilées ou vernies évitant la consommation de résine et de fibre de verre. Pour garantir un impact
             environnemental minimum, tu devras t’assurer de la provenance du bois. Il doit être sourcé localement et
             provenir d’une forêt gérée durablement.</h4>
-          <img src="../ressources/images/En-bois.png" alt="images de planches Ecologique" />
+          <img src="../ressources/images/en-bois.webp" alt="images de planches Ecologique" />
           <a rel="noopener" href="https://revosurfboards.fr/gamme-planches-surf-bois/"
             target="_blank">https://revosurfboards.fr/gamme-planches-surf-bois/</a>
         </div>
@@ -90,7 +90,7 @@
             plastique.Ces deux matières premières sont utilisées grâce à la technique d’impression 3D. Parmi les marques
             qui utilisent l’impression 3D, on retrouve Yuyo. Pour la fabrication de ses noyaux, la marque
             montpelliéraine a mis au point une composition mixte à base de PLA et de PET recyclé.</h4>
-          <img class="yuyo" src="../ressources/images/yuyo.png" alt="images de planches Ecologique" />
+          <img class="yuyo" src="../ressources/images/yuyo.webp" alt="images de planches Ecologique" />
           <a rel="noopener" href="https://yuyo.surf/" target="_blank">https://yuyo.surf/</a>
         </div>
 
@@ -116,7 +116,7 @@
             et pénètre dans la structure cartonnée alors la planche est morte.Et dans le même genre mais encore plus
             original, on a l’idée du jeune bordelais Marceau Pegon qui utilise le même concept mais à base de carton
             recyclé issu de rouleaux de PQ… A suivre !</h4>
-          <img class="carton" src="../ressources/images/carton.jpg" alt="images de planches Ecologique" />
+          <img class="carton" src="../ressources/images/carton.webp" alt="images de planches Ecologique" />
         </div>
 
         <div class="cards">
@@ -127,7 +127,7 @@
             et remplir au bout de quelques jours la totalité du moule. D’un point de vue environnemental ce procédé
             semble très vertueux. Le process nécessite peu d’énergie, il consomme peu de ressources (déchets agricoles
             principalement) et est biodégradable.</h4>
-          <img class="champignons" src="../ressources/images/champignons.jpg" alt="images de planches Ecologique" />
+          <img class="champignons" src="../ressources/images/champignons.webp" alt="images de planches Ecologique" />
         </div>
 
         <div class="cards">
@@ -136,7 +136,7 @@
             matières végétales.L’utilisation de ce type de résine pourrait réduire de 30 à 50% les émissions CO2 d’une
             planche.Couplée à des techniques pour limiter la quantité de résine utilisée, comme la stratification sous
             vide, l’utilisation de résine bio sourcée permet de réduire considérablement l’impact d’une planche.</h4>
-          <img class="yuyo" src="../ressources/images/squid.png" alt="images de planches Ecologique" />
+          <img class="resine-lin" src="../ressources/images/squid.webp" alt="images de planches Ecologique" />
           <a rel="noopener" href="https://www.squid-surfboards.com/surfboards/"
             target="_blank">https://www.squid-surfboards.com/surfboards/</a>
         </div>
@@ -148,7 +148,7 @@
             ses propriétés mécaniques plus importantes (315 g/m²) que le tissu en fibre de verre (125 à 200 g/m²), le
             shaper peut réduire le nombre de couches utilisées. Une seule couche sur le pont et une sur la carène
             peuvent suffire au lieu des 3 ou 4 utilisées dans la fabrication classique.</h4>
-          <img class="yuyo" src="../ressources/images/squall.png" alt="images de planches Ecologique" />
+          <img class="resine-lin" src="../ressources/images/squall.webp" alt="images de planches Ecologique" />
           <a rel="noopener" href="https://squallsurfboards.fr/categorie-produit/surfboards/"
             target="_blank">https://squallsurfboards.fr/categorie-produit/surfboards/</a>
         </div>
@@ -158,7 +158,7 @@
           <h4>La fibre de basalte dispose de caractéristiques proches de la fibre de carbone et permet de renforcer la
             structure de la planche. Cependant, son processus de fabrication nécessite de faire fondre la roche
             volcanique et demande beaucoup d’énergie. Son avantage écologique reste donc très discutable.</h4>
-          <img class="yuyo" src="../ressources/images/nomads.png" alt="images de planches Ecologique" />
+          <img class="yuyo" src="../ressources/images/nomads.webp" alt="images de planches Ecologique" />
           <a rel="noopener" href="https://www.nomads-surfing.com/categorie/planches/"
             target="_blank">https://www.nomads-surfing.com/categorie/planches/</a>
         </div>
@@ -169,7 +169,7 @@
             imperméable et anti-dérapante, ces feuilles de liège plaquées sur le pont et la carène permettent de réduire
             significativement la quantité de résine utilisée ainsi que la Wax. Cette finition liège renforce également la
             solidité de la planche pour une durée de vie maximale.</h4>
-          <img class="yuyo" src="../ressources/images/liege.jpg" alt="images de planches Ecologique" />
+          <img class="yuyo" src="../ressources/images/liege.webp" alt="images de planches Ecologique" />
           <a rel="noopener" href="https://notoxsurf.com/" target="_blank">https://notoxsurf.com/</a>
         </div>
 
