--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header class="Header">
 
         <div class="Logo-title">
-            <a href="#Home"><img src="ressources/images/Hibiscus-Flower-Surf-Hawaii-Beach-Logo-Graphics.png"
+            <a href="#Home"><img src="ressources/images/ower-surf-hawaii-beach-logo-graphics.webp"
                     alt="Logo des sport extreme" /></a>
 
             <h2>The Green Surf</h2>
@@ -70,7 +70,7 @@
         <section class="about" id="About">
             <div class="container">
                 <div class="container-image">
-                    <img src="ressources/images/Surfeur.png" alt="Image Sport Extreme">
+                    <img src="ressources/images/surfeur.webp" alt="Image Sport Extreme">
                 </div>
                 <div class="container-text">
                     <h3>Le <span>Surf Ecologique</span></h3>
@@ -120,32 +120,32 @@
 
                 <a href="Pages/Planche_surf.html" class="div-portfolio">
                     <div class="container-hover">
-                        <img src="ressources/images/png-clipart-computer-icons-magnifying-glass-magnifier-symbol-magnifying-glass-text-magnifier-thumbnail-removebg-preview.png"
+                        <img src="ressources/images/magnifier-thumbnail-removebg-preview.webp"
                             alt="logo yeux" class="logo-yeux">
                     </div>
                     <div class="div-img">
-                        <img src="ressources/images/j1vl1ljn.bmp" alt="image planche de surf" class="img-portfolio">
+                        <img src="ressources/images/j1vl1ljn.webp" alt="image planche de surf" class="img-portfolio">
                     </div>
                 </a>
 
                 <a href="Pages/Combinaison.html" class="div-portfolio">
                     <div class="container-hover">
-                        <img src="ressources/images/png-clipart-computer-icons-magnifying-glass-magnifier-symbol-magnifying-glass-text-magnifier-thumbnail-removebg-preview.png"
+                        <img src="ressources/images/magnifier-thumbnail-removebg-preview.webp"
                             alt="logo yeux" class="logo-yeux">
                     </div>
                     <div class="div-img">
-                        <img src="ressources/images/ac1u6gzg.bmp" alt="image wax" class="img-portfolio">
+                        <img src="ressources/images/ac1u6gzg.webp" alt="image wax" class="img-portfolio">
                     </div>
                 </a>
 
 
                 <a href="Pages/Accessoires.html" class="div-portfolio">
                     <div class="container-hover">
-                        <img src="ressources/images/png-clipart-computer-icons-magnifying-glass-magnifier-symbol-magnifying-glass-text-magnifier-thumbnail-removebg-preview.png"
+                        <img src="ressources/images/magnifier-thumbnail-removebg-preview.webp"
                             alt="logo yeux" class="logo-yeux">
                     </div>
                     <div class="div-img">
-                        <img src="ressources/images/accessoires.png" alt="image accessoires" class="img-portfolio">
+                        <img src="ressources/images/accessoires.webp" alt="image accessoires" class="img-portfolio">
                     </div>
                 </a>
 
