--- a/Pages/Accessoires.html
+++ b/Pages/Accessoires.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Site web sur les le Surf écologique">
-  <meta name="author" content="Mathis M.">
+  <meta name="author" content="Adrien">
 
   <link rel="apple-touch-icon" sizes="180x180" href="../ressources/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="../ressources/favicon/favicon-32x32.png">
@@ -226,7 +226,7 @@
       <div class="row">
         <div class="col-md-8 col-sm-6 col-xs-12">
           <p class="copyright-text">Copyright &copy; 2022 All Rights Reserved by
-            <a href="#">Adrien et Mathis </a>.
+            <a href="#">Adrien</a>.
           </p>
         </div>
 
